--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title><%=title%></title>
+    <title>Todolist</title>
+    <link rel="icon" type="image/svg+xml" href="https://example.com/image.svg">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/58e7a32087.js" crossorigin="anonymous"></script>
   </head>
