--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,17 +5,20 @@
   </div>
 
   <div class="box">
-    <%listItems.forEach(item => {%>
-      <div class="item">
-        <form action="/delete" method="post">
-          <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
-        </form>
-        <p><%=item.name%></p>
-      </div>
-    <%});%>
+    <%if (listItems) {%>
+      <%listItems.forEach(item => {%>
+        <div class="item">
+          <form action="/delete" method="post">
+            <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
+          </form>
+          <p><%=item.name%></p>
+        </div>
+      <%});%>
+    <%}%>
+
     <form class="item" action="/" method="post">
-      <input class="newItem" type="text" name="textField" placeholder="New to-do" autofocus>
-      <button class="btn btn-primary btn-lg custom-btn" type="submit" name="button">
+      <input class="newItem" type="text" name="newItem" placeholder="New to-do" autofocus>
+      <button class="btn btn-primary btn-lg custom-btn" type="submit" name="list" value="<%=header%>">
         <i class="fas fa-plus"></i>
       </button>
     </form>
